2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h:
	  Provide mcs51IsParmInCall.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Replace further uses of fReturn by aopArg and aopRet.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/ralloc.c,
	  src/mcs51/ralloc.h:
	  Fix mcs51_regname_to_idx, patch by Oleg Endo.
	* src/mcs51/peeph.def:
	  Fix peephole optimizer rule 186.e, patch by Oleg Endo.

2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Improve mcs51 calling convention documentation.
	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/main.c,
	  src/mcs51/rtrack:
	  Use aopArg, provide mcs51IsReturned and mcs51IsRegArg.

2023-11-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h:
	  Use aopRet.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Basic aopArg for mcs51.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Handle return values via aopRet.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.h,
	  src/mcs51/gen.c:
	  mcs51 code generation refactoring.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.h,
	  src/z80/gen.c:
	  Burn AOP_STR.

2023-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Make aopGet use asmop * instead of operand *.

2023-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Fix opIsGptr, so it works even when the op has no aop yet.

2023-11-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/main.c,
	  src/mcs51/ralloc.c,
	  src/SDCCglue.c:
	  mcs51 code generation refactoring.

2023-11-11 Felix Salfelder <felix AT salfelder.org>

	* Makefile.in:
	  Fix Ticket #193
