@@ -1,3 +1,8 @@
+2023-11-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* support/regression/tests/bug-3675.c:
+	  Regression test for bug #3675.
+
 2023-11-16 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/mcs51/gen.c,
